# rust-simple-httpie

./: Cargo.toml  README.md
src/: main.rs
